# acquisition-io

./: .gitignore  pyproject.toml
acquisition_io/: __init__.py  acquisition.py  utils.py
acquisition_io/loaders/: cq1_loader.py  legacy_loader.py  lux_loader.py  nd2_loader.py
