[project]
name = "acquisition_io"
version = "0.1.2"
description = "A library for loading microscopy data as xarray datasets"
requires-python = ">=3.11"
dependencies = [
    "tifffile>=2025.3.13",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "dask>=2025.3.0",
    "xarray>=2025.3.0",
    "scikit-image>=0.25.2",
]

[project.optional-dependencies]
nd2 = [
    "nd2>=0.10.2",
]
cq1 = [
    "ome-types>=0.6.0",
    "lxml>=5.3.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.34.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "ruff>=0.11.2",
]

[tool.mypy]
strict = false
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
